--- a/JavaProject_/.project
+++ b/JavaProject_/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaProject_</name>
+	<name>JavaProject_LOGIN</name>
 	<comment></comment>
 	<projects>
 	</projects>
